--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 Flask==0.10.1
+Flask-MySQL==1.3
+Flask-MySQLdb==0.2.0
+Flask-WTF==0.12
 Jinja2==2.8
 MarkupSafe==0.23
+MySQL-python==1.2.5
+WTForms==2.1
 Werkzeug==0.11.3
+beautifulsoup4==4.4.1
 gunicorn==19.4.1
 itsdangerous==0.24
+mysqlclient==1.3.7
 wsgiref==0.1.2
